2002-12-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-filter-html.c: Modified to use url-scanner.c instead
	of using glibc's regex routines. This has improved performance by
	~16.5x not to mention that it is also more accurate than the regex
	patterns had been (the url scanner can be setup to be much
	stricter in the matching).

	* gmime/url-scanner.c: New source file implementing a simple
	expression scanner meant (currently designed for url matching)
	which uses gtrie.

	* gmime/gtrie.c: New source file implementing Aho-Corasick's Trie
	graph algorithm.


2002-12-08  Jeffrey Stedfast  <fejj@ximian.com>

	Fix for bug #91536

	* gmime/gmime-object.c (g_mime_object_register_type): Use a struct
	to hold the object_type for the subtype hash. 64 archs use 32bit
	ints and so using GINT_TO_POINTER() and GPOINTER_TO_INT() doesn't
	work.
	(g_mime_object_new_type): Get the object_type from the subtype
	bucket.

2002-12-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream.c (g_mime_stream_writev): Pointer erithmetic
	fixes.

	* gmime/memchunk.c (memchunk_alloc): Pointer arithmetic fixes.

2002-12-03  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (datetok): Modified to properly handle when
	the first char of a token is a special char (such as a '-') that
	is also used as a token delimiter.

2002-12-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-filter-html.c (g_mime_filter_html_init): match
	REG_ICASE so we don't cut off at the first capital letter, duh.

2002-12-01  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c: #define _GNU_SOURCE for isblank on GNU
	systems.

	* gmime/gmime-gpg-context.c (gpg_ctx_op_wait): Fixed the errno
	saving.

2002-11-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (write_received): After skipping the
	special received token and it's value, skip any following comments
	as well.
	(skip_addrspec): Skip past the '.' and '@' chars before decoding